fixed padding on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -104,6 +104,9 @@ hr {
     .description-text {
       margin-top: 0px;
     }
+    #intro {
+      padding-top: 0px;
+    }
   }
     
   
